<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRoot_pageLinkSelect"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/selectLeftButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_page_left" />

    <Button
        android:id="@+id/selectRightButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_page_right" />

    <Button
        android:id="@+id/selectCancelButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
