<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationLayout"
    style="@style/NavigationTheme" >

    <LinearLayout
        android:id="@+id/leftLayout"
        style="@style/NavigationLeftLayoutTheme" >

        <ImageButton
            android:id="@+id/backButton"
            style="@style/ToolbarButton"
            android:contentDescription="@string/button_home"
            android:src="@drawable/toolbaricon_back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rightLayout"
        style="@style/NavigationRightLayoutTheme" >

        <ImageButton
            android:id="@+id/appendButton"
            style="@style/ToolbarButton"
            android:contentDescription="@string/bookmark_button_add"
            android:src="@drawable/toolbaricon_addbookmark" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/centerLayout"
        style="@style/NavigationCenterLayoutTheme"
        android:layout_toLeftOf="@+id/rightLayout"
        android:layout_toRightOf="@+id/leftLayout" >

        <TextView
            android:id="@+id/titleView"
            style="@style/NavigationTitleView"
            android:text="@string/title_bookmark" />
    </RelativeLayout>

    <View
        style="@style/NavigationBoundaryTheme"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
